2001-11-05  Radek Doulik  <rodo@ximian.com>
 
	* htmlengine-edit-cut-and-paste.c
	(html_engine_cut_and_paste_begin): check for e->mark != NULL
 
2001-11-05  Larry Ewing  <lewing@ximian.com>

	* htmlselection.h (html_selection_current_time): s/()/(void)/

2001-11-02  Radek Doulik  <rodo@ximian.com>

	* htmltext.c (get_cursor): if we are between two text objects, use
	the second one fixes #14153

2001-11-03  Radek Doulik  <rodo@ximian.com>

	* htmlengine-print.c (html_engine_print_with_header_footer): set
	font manager defaults before we do test for fixed font

2001-11-01  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c (html_engine_replace_word_with): disable selection,
	don't store selection across replace

	* htmlembedded.c (destroy): if changed_id > 0 then disconnect it

	* htmlembedded.h: added changed_id, where we store handler id from
	connected html_embedded_object_changed

	* htmlembedded.c (html_embedded_object_changed): moved from
	htmlengine.c and renamed

2001-10-31  Ettore Perazzoli  <ettore@ximian.com>

	* htmliframe.c (html_iframe_init): Set ->scroll before calling
	`html_iframe_set_scrolling()'.  Fixes #14098.

2001-10-30  Larry Ewing  <lewing@ximian.com>

	* htmlselection.c (html_selection_current_time): add helper
	function.

	* htmlselection.h (html_selection_current_time): add prototype.

	* gtkhtml.c (gtk_html_set_base): add call to set the document
	base.
	(gtk_html_get_base): get the document base.
	(gtk_html_cut): html_selection_current_time.
	(gtk_html_copy): html_selection_current_time.
	(gtk_html_paste): html_selection_current_time.
	
	* gtkhtml.h: add *_base prototypes.

	* gtkhtml-private.h: add base_url member.

	* htmliframe.c (html_iframe_init): use set_scrolling.
	(html_iframe_set_scrolling): add.
	(calc_size): use set_scrolling.

	* htmliframe.h (html_iframe_set_scrolling): add helper function.

	* htmlengine.c (block_end_div): set e->divAlign too.  Fixes 
	Ximian #9167.
	
2001-10-30  Radek Doulik  <rodo@ximian.com>
